# elastic-relationships

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  docker.sh  pyproject.toml
.github/workflows/: format.yml  pylint.yml  test.yml
elastic_relationships/: __init__.py
hurl/: customer.hurl
tests/: __init__.py  test_customers.py
