[tool.poetry]
name = "elastic-relationships"
version = "0.1.0"
description = ""
authors = ["victor4pinheiro <victor.pinheiro.soft@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
elasticsearch = "^8.12.1"
flask = "^3.0.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
